tests/max_encoded_len_ui/name_value_attr.stderr
error: expect: #[max_encoded_len_mod(path::to::crate)]
 --> $DIR/name_value_attr.rs:4:3
  |
4 | #[max_encoded_len_mod = "frame_support::max_encoded_len"]
  |   ^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `max_encoded_len` found for struct `Example` in the current scope
 --> $DIR/name_value_attr.rs:8:19
  |
5 | struct Example;
  | --------------- function or associated item `max_encoded_len` not found for this
...
8 |     let _ = Example::max_encoded_len();
  |                      ^^^^^^^^^^^^^^^ function or associated item not found in `Example`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `max_encoded_len`, perhaps you need to implement it:
          candidate #1: `MaxEncodedLen`
